Thu Sep  1 14:04:29 BST 2005  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in (ATTRIBUTE_WARN_UNUSED_RESULT): Define to a
	  function attribute enabling unused result checking if using GCC
	  3.4 or newer.
	  (xmalloc, xrealloc, strappend): Use it.

Wed Aug 31 01:23:55 BST 2005  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (directory_table): Add Simplified Chinese ->
	  GB2312 and Traditional Chinese -> BIG5.
	  (charset_table): Use the nippon device for BIG5, GB2312, and GBK.
	  (device_table): Assume that the nippon device is
	  encoding-agnostic, since it handles several encodings now.
	  (compatible_encodings, get_roff_encoding): Extend the ja_JP.UTF-8
	  hack to cover zh_CN.UTF-8, zh_SG.UTF-8, and zh_TW.UTF-8 too.

Sun Jul 31 16:34:15 BST 2005  Colin Watson  <cjwatson@debian.org>

	* docs/COPYING, docs/COPYING.LIB: Update from www.gnu.org to pick up
	  the FSF's new address.
	* Update all other GPL and LGPL notices with the new address (apart
	  from those in externally-maintained files).

Wed Jul 27 11:29:02 BST 2005  Colin Watson  <cjwatson@debian.org>

	* src/man.c (gripe_no_man): Don't emit a different message in the
	  troff case; it's extra translation load and nobody really cares
	  about the distinction. Avoid splitting up a sentence into two
	  translatable pieces (Debian bug #320111).
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
	  po/fr.po, po/it.po, po/ja.po, po/pl.po, po/pt_BR.po, po/ro.po,
	  po/ru.po, po/sv.po: Update with msgmerge.

Tue Jul 26 00:05:02 BST 2005  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): Use 'col -b -p -x' rather than just
	  'col -b' when stdout is not a terminal.

Tue Jul 12 02:08:41 BST 2005  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in (ATTRIBUTE_MALLOC): Define to a function
	  attribute enabling malloc return value checking if using GCC 2.96
	  or newer.
	  (xmalloc, xrealloc, xstrdup, xstrndup): Use it.
