@@ -1,3 +1,8 @@
+Thu Sep  1 14:10:07 BST 2005  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (argstr_get_word): Use an enum for quotemode rather
+	  than magic numbers.
+
 Thu Sep  1 14:04:29 BST 2005  Colin Watson  <cjwatson@debian.org>
 
 	* include/manconfig.h.in (ATTRIBUTE_WARN_UNUSED_RESULT): Define to a
